--- a/docs/ymls/docker-compose.yml
+++ b/docs/ymls/docker-compose.yml
@@ -21,32 +21,32 @@ services:
       retries: 128
     restart: on-failure
 
-  mysql:
-    image: mysql:5.7
-    container_name: "mysql"
-    labels:
-      NAME: "mysql"
-    hostname: "mysql"
-    networks:
-      - sia
-    ports:
-      - "3306:3306"
-    environment:
-      - TZ=Asia/Shanghai
-      - MYSQL_ROOT_PASSWORD=123456
-    command: [
-      '--character-set-server=utf8mb4',
-      '--collation-server=utf8mb4_unicode_ci'
-    ]
-    volumes:
-      - ${DOCKER_VOL_DIR}/mysql/data:/var/lib/mysql
-      - ${DOCKER_VOL_DIR}/mysql/conf:/etc/mysql/conf.d
-      - ${DOCKER_VOL_DIR}/mysql/logs:/logs
-    healthcheck:
-      test: "mysqladmin ping -h localhost -p$$MYSQL_ROOT_PASSWORD && test '0' -eq $$(ps aux | awk '{print $$11}' | grep -c -e '^mysql$$')"
-      interval: 15s
-      timeout: 5s
-      retries: 128
+#  mysql:
+#    image: mysql:5.7
+#    container_name: "mysql"
+#    labels:
+#      NAME: "mysql"
+#    hostname: "mysql"
+#    networks:
+#      - sia
+#    ports:
+#      - "3306:3306"
+#    environment:
+#      - TZ=Asia/Shanghai
+#      - MYSQL_ROOT_PASSWORD=123456
+#    command: [
+#      '--character-set-server=utf8mb4',
+#      '--collation-server=utf8mb4_unicode_ci'
+#    ]
+#    volumes:
+#      - ${DOCKER_VOL_DIR}/mysql/data:/var/lib/mysql
+#      - ${DOCKER_VOL_DIR}/mysql/conf:/etc/mysql/conf.d
+#      - ${DOCKER_VOL_DIR}/mysql/logs:/logs
+#    healthcheck:
+#      test: "mysqladmin ping -h localhost -p$$MYSQL_ROOT_PASSWORD && test '0' -eq $$(ps aux | awk '{print $$11}' | grep -c -e '^mysql$$')"
+#      interval: 15s
+#      timeout: 5s
+#      retries: 128
 
   redis:
     image: redis:3.2
