--- a/docs/ymls/mysql.yml
+++ b/docs/ymls/mysql.yml
@@ -1,31 +1,32 @@
-version: '3'
+version: '3.2'
 services:
   mysql:
     image: mysql:5.7
-    container_name: mysql
+    container_name: "mysql"
+    labels:
+      NAME: "mysql"
+    hostname: "mysql"
     networks:
-      - infra
+      - cloud
     ports:
       - "3306:3306"
-    restart: always
+    environment:
+      - TZ=Asia/Shanghai
+      - MYSQL_ROOT_PASSWORD=123456
     command: [
       '--character-set-server=utf8mb4',
       '--collation-server=utf8mb4_unicode_ci'
     ]
-    environment:
-      - TZ=Asia/Shanghai
-      - MYSQL_ROOT_PASSWORD=123456
     volumes:
-      - "${DOCKER_VOL_DIR}/mysql/data:/var/lib/mysql"
-      - "${DOCKER_VOL_DIR}/mysql/conf:/etc/mysql/conf.d"
-      - "${DOCKER_VOL_DIR}/mysql/logs:/logs"
+      - ${DOCKER_VOL_DIR}/mysql/data:/var/lib/mysql
+      - ${DOCKER_VOL_DIR}/mysql/conf:/etc/mysql/conf.d
+      - ${DOCKER_VOL_DIR}/mysql/logs:/logs
     healthcheck:
       test: "mysqladmin ping -h localhost -p$$MYSQL_ROOT_PASSWORD && test '0' -eq $$(ps aux | awk '{print $$11}' | grep -c -e '^mysql$$')"
       interval: 15s
       timeout: 5s
       retries: 128
-    labels:
-      NAME: "mysql"
+
 networks:
-  #基础设施层网络
-  infra:
+  cloud:
+    driver: bridge
