--- a/cloud-spider/pom.xml
+++ b/cloud-spider/pom.xml
@@ -163,29 +163,29 @@
                 </dependencies>
             </plugin>
             <!-- TODO 若要发布新镜像则打开此插件 -->
-            <plugin>
+            <!--<plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <configuration>
-                    <!-- Docker私服地址 -->
+                    &lt;!&ndash; Docker私服地址 &ndash;&gt;
                     <repository>${docker.image.prefix}/${project.artifactId}</repository>
                     <tag>${project.version}</tag>
                     <buildArgs>
-                        <!-- 提供参数向Dockerfile传递 -->
+                        &lt;!&ndash; 提供参数向Dockerfile传递 &ndash;&gt;
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
                 </configuration>
                 <executions>
                     <execution>
                         <id>build-image</id>
-                        <!-- 将插件绑定在package这个phase上（也就是说，用户只需执行mvn package ，就会自动执行mvn docker:build） -->
+                        &lt;!&ndash; 将插件绑定在package这个phase上（也就是说，用户只需执行mvn package ，就会自动执行mvn docker:build） &ndash;&gt;
                         <phase>package</phase>
                         <goals>
                             <goal>build</goal>
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 </project>
