--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,6 @@
                 <scope>import</scope>
             </dependency>
 
-
-            <dependency>
-                <groupId>com.smart4y</groupId>
-                <artifactId>cloud-common-messaging</artifactId>
-                <version>${project.version}</version>
-            </dependency>
             <dependency>
                 <groupId>com.smart4y</groupId>
                 <artifactId>cloud-core</artifactId>
@@ -188,4 +182,16 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>aliYun</id>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>jCenter-snapshots</id>
+            <name>jCenter</name>
+            <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
+        </repository>
+    </repositories>
 </project>
