--- a/cloud-spider/pom.xml
+++ b/cloud-spider/pom.xml
@@ -162,7 +162,7 @@
                     </dependency>
                 </dependencies>
             </plugin>
-            <!-- TODO 若要发布新镜像则打开此插件 -->
+            <!-- 若要发布新镜像则打开此插件 -->
             <!--<plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
