--- a/cloud-core/pom.xml
+++ b/cloud-core/pom.xml
@@ -15,7 +15,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <project.build.sourceEApiResourceControllerncoding>UTF-8</project.build.sourceEApiResourceControllerncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>2.2.8.RELEASE</spring.boot.version>
         <spring.cloud.version>Hoxton.SR6</spring.cloud.version>
         <spring.cloud.alibaba.version>2.2.1.RELEASE</spring.cloud.alibaba.version>
