--- a/cloud-owl/pom.xml
+++ b/cloud-owl/pom.xml
@@ -83,6 +83,13 @@
             <groupId>net.sourceforge.nekohtml</groupId>
             <artifactId>nekohtml</artifactId>
         </dependency>
+
+        <!-- ELK-Redis -->
+        <dependency>
+            <groupId>com.cwbase</groupId>
+            <artifactId>logback-redis-appender</artifactId>
+            <version>1.1.6</version>
+        </dependency>
     </dependencies>
 
     <build>
