--- a/cloud-spider/pom.xml
+++ b/cloud-spider/pom.xml
@@ -109,6 +109,13 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>${knife4j.version}</version>
         </dependency>
+
+        <!-- ELK-Redis -->
+        <dependency>
+            <groupId>com.cwbase</groupId>
+            <artifactId>logback-redis-appender</artifactId>
+            <version>1.1.6</version>
+        </dependency>
     </dependencies>
 
     <build>
