--- a/docs/elk/standalone/logstash/pipeline/logstash.conf
+++ b/docs/elk/standalone/logstash/pipeline/logstash.conf
@@ -1,10 +1,11 @@
 input {
   redis {
-    host => "redis"
     data_type => "list"
     key => "redis-log"
+    host => "redis"
     password => "123456"
     codec => "json"
+    threads => 5
   }
 
   gelf {
