--- a/cloud-common/pom.xml
+++ b/cloud-common/pom.xml
@@ -15,8 +15,10 @@
     <packaging>pom</packaging>
 
     <modules>
-	<module>cloud-common-core</module>
-	<module>cloud-common-generator</module>
+        <module>cloud-common-core</module>
+        <module>cloud-common-generator</module>
+        <module>cloud-common-loadbalancer</module>
+        <module>cloud-common-sms</module>
         <module>cloud-common-neo4j</module>
     </modules>
 
