--- a/cloud-common/pom.xml
+++ b/cloud-common/pom.xml
@@ -16,7 +16,9 @@
 
     <modules>
         <module>cloud-common-core</module>
+        <module>cloud-common-mapper</module>
         <module>cloud-common-generator</module>
+
         <module>cloud-common-loadbalancer</module>
         <module>cloud-common-sms</module>
         <module>cloud-common-neo4j</module>
