--- a/cloud-spider/pom.xml
+++ b/cloud-spider/pom.xml
@@ -57,6 +57,10 @@
             <groupId>com.smart4y</groupId>
             <artifactId>cloud-common-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.smart4y</groupId>
+            <artifactId>cloud-common-mapper</artifactId>
+        </dependency>
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
