--- a/cloud-common/cloud-common-mapper/pom.xml
+++ b/cloud-common/cloud-common-mapper/pom.xml
@@ -20,6 +20,7 @@
 
         <mybatis.version>3.5.5</mybatis.version>
         <mapper.version>4.1.5</mapper.version>
+        <mybatis-generator-core.version>1.4.0</mybatis-generator-core.version>
         <mapper-spring-boot-starter.version>2.1.5</mapper-spring-boot-starter.version>
         <pagehelper-spring-boot-starter.version>1.2.13</pagehelper-spring-boot-starter.version>
     </properties>
@@ -98,6 +99,17 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>${mybatis-generator-core.version}</version>
+        </dependency>
+        <!-- 模板依赖 -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
