--- a/cloud-spider/src/main/resources/application.yml
+++ b/cloud-spider/src/main/resources/application.yml
@@ -50,7 +50,7 @@ spring:
     username: guest
     password: guest
     virtual-host: /
-    publisher-confirms: true
+    publisher-confirm-type: correlated
   redis:
     host: 127.0.0.1
     port: 6379
