--- a/cloud-hippo/pom.xml
+++ b/cloud-hippo/pom.xml
@@ -58,6 +58,10 @@
             <groupId>com.smart4y</groupId>
             <artifactId>cloud-common-mapper</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.smart4y</groupId>
+            <artifactId>cloud-common-swagger</artifactId>
+        </dependency>
 
         <!-- Lombok -->
         <dependency>
