--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,16 @@
                 <groupId>com.smart4y</groupId>
                 <artifactId>cloud-common-sms</artifactId>
                 <version>${project.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.smart4y</groupId>
