--- a/cloud-hippo/src/main/resources/application.yml
+++ b/cloud-hippo/src/main/resources/application.yml
@@ -134,7 +134,7 @@ cloud:
     access-token-uri: ${cloud.common.access-token-uri}
     user-authorization-uri: ${cloud.common.user-authorization-uri}
   tenant:
-    enable: true
+    enable: false
     type: column
 
 sms:
